--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <div id="content"></div>
-    <script src="main.js"></script>
-  </body>
+  <body></body>
+  <script src="./dist/main.js"></script>
 </html>
