--- a/src/template.html
+++ b/src/template.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Test</h1>
+    <h3>das</h3>
+    <h2>Working!</h2>
+    <div class="image">
+      <img src="./assets/imgs/new-zealand.jpg" alt="" />
+    </div>
+  </body>
 </html>
