--- a/src/template.html
+++ b/src/template.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <h1>Test</h1>
-    <h3>das</h3>
     <h2>Working!</h2>
+
+    <!-- Testing comments -->
+
     <div class="image">
       <img src="./assets/imgs/new-zealand.jpg" alt="" />
     </div>
