--- a/src/template.html
+++ b/src/template.html
@@ -6,14 +6,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>Test</h1>
-    <h2>Working!</h2>
-
-    <!-- Testing comments -->
-
-    <div class="image">
-      <img src="./assets/imgs/new-zealand.jpg" alt="" />
-    </div>
-  </body>
+  <body></body>
 </html>
