--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&family=Montserrat:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Passion</title>
   </head>
   <body></body>
 </html>
